--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meanderingsleep",
+  "name": "diehappy",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fontsource/manrope": "^5.2.6",
+    "@next/third-parties": "^15.4.6",
     "@types/node": "^24.2.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
